Update .gitignore; Exclude `bin/`

--- a/.gitignore
+++ b/.gitignore
@@ -14,5 +14,8 @@
 # Coverage profiles
 *.coverprofile
 
+# Binary files
+bin/
+
 # Dependency directories (remove the comment below to include it)
 # vendor/
